SLOWLY BUT SURELY

--- a/.env
+++ b/.env
@@ -76,7 +76,7 @@ OLLAMA_CPU=4.0
 OLLAMA_MEMORY=22G
 REDIS_MEMORY=1G
 REDIS_CPU=1.0
-NGINX_MEMORY=512M
+NGINX_MEMORY=1G
 NGINX_CPU=1.0
 
 # =============================================================================
