--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - DEFAULT BLOCK ALL, WHITELIST THROUGH aaa_is_who
+# nginx/nginx.conf - COMPLETE WITH CHALLENGE SYSTEM FOR GUEST SESSIONS
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -50,9 +50,9 @@ http {
     lua_socket_read_timeout 600s;
     lua_socket_send_timeout 600s;
     
-    # Shared memory zones
+    # Shared memory zones - INCREASED SIZE FOR CHALLENGE SYSTEM
     lua_shared_dict guest_toggle 64k;
-    lua_shared_dict guest_sessions 10m;
+    lua_shared_dict guest_sessions 2m;  # Increased for sessions + challenges
     lua_shared_dict sse_sessions 5m;
 
     server {
@@ -122,7 +122,7 @@ http {
             }
         }
 
-        # API routes - Only these specific endpoints allowed
+        # AUTH API routes - Login and logout only
         location ~ ^/api/auth/(login|logout)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
@@ -142,6 +142,7 @@ http {
             }
         }
 
+        # REGISTRATION API
         location = /api/register {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
@@ -161,7 +162,7 @@ http {
             }
         }
 
-        # Guest API routes for session management
+        # GUEST API routes - WITH FULL CHALLENGE SYSTEM
         location ~ ^/api/guest/(create-session|challenge-status|challenge-response|stats)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -181,7 +182,7 @@ http {
             }
         }
 
-        # Chat API routes - Authentication handled internally
+        # CHAT API routes - Authentication handled internally
         location ~ ^/api/chat/(stream|history|clear)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -201,7 +202,7 @@ http {
             }
         }
 
-        # Admin API routes - Authentication handled internally
+        # ADMIN API routes - Authentication handled internally
         location ~ ^/api/admin/(stats|users|clear-guest-sessions)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -241,7 +242,7 @@ http {
             }
         }
 
-        # ERROR PAGES - FIXED: Use manage_views through aaa_is_who
+        # ERROR PAGES - Use manage_views through aaa_is_who
         error_page 404 @custom_404;
         error_page 429 @custom_429;
         error_page 500 502 503 504 @custom_50x;
