tweaks made 20 layer gguf is 5gb vram approx

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-# CLEAN .env - Optimized Configuration for Ollama with GGUF Model
+# OPTIMIZED .env - Configuration for Ollama with GGUF Model
 # =============================================================================
 
 # 🔐 JWT CONFIGURATION
@@ -13,45 +13,49 @@ ADMIN_PASSWORD=admin1
 ADMIN_USER_ID=admin
 
 # =============================================================================
-# 🤖 MODEL CONFIGURATION - OLLAMA
+# 🤖 MODEL CONFIGURATION - OLLAMA OPTIMIZED
 # =============================================================================
 MODEL_URL=http://ollama:11434
 MODEL_NAME=devstral
 
 # =============================================================================
-# 🎛️ MODEL PARAMETERS - UPDATED FOR 2048 CONTEXT
+# 🎛️ MODEL PARAMETERS - OPTIMIZED FOR DEVSTRAL SMALL
 # =============================================================================
 
-# Core model parameters
-MODEL_TEMPERATURE=0.7
-MODEL_TOP_P=0.9
-MODEL_TOP_K=40
-MODEL_MIN_P=0.0
-MODEL_REPEAT_PENALTY=1.1
-MODEL_REPEAT_LAST_N=64
+# Core sampling parameters
+MODEL_TEMPERATURE=0.7          # Good balance for code generation
+MODEL_TOP_P=0.9               # Standard value, works well
+MODEL_TOP_K=40                # Standard value, good diversity
+MODEL_MIN_P=0.05              # Better than 0.0, helps with quality
+MODEL_REPEAT_PENALTY=1.1      # Good default
+MODEL_REPEAT_LAST_N=64        # Reasonable lookback
 
-# Context and prediction settings
-MODEL_NUM_CTX=512
-MODEL_NUM_PREDICT=256
-MODEL_SEED=0
+# Context and prediction settings - OPTIMIZED
+MODEL_NUM_CTX=2048            # Increased from 512 - you have 22GB RAM!
+MODEL_NUM_PREDICT=512         # Increased from 256 - allow longer responses
+MODEL_SEED=0                  # 0 = random seed each time
 
-# Model file management
-OLLAMA_NUM_THREAD=6
-OLLAMA_MMAP=false
-OLLAMA_NUM_PARALLEL=3
-OLLAMA_GPU_LAYERS=12
+# Hardware optimization - CORRECTED
+OLLAMA_NUM_THREAD=6           # Matches your CPU allocation
+OLLAMA_MMAP=true              # Changed to true - better memory efficiency
+OLLAMA_NUM_PARALLEL=2         # Reduced from 3 - more stable with limited context
+OLLAMA_GPU_LAYERS=20          # Conservative for 8GB VRAM - test and increase if stable
 
-# Ollama server configuration
+# Ollama server configuration - OPTIMIZED
 OLLAMA_HOST=0.0.0.0:11434
 OLLAMA_ORIGINS=*
 OLLAMA_MODELS=/root/.ollama/models
-OLLAMA_MAX_LOADED_MODELS=1
-OLLAMA_FLASH_ATTENTION=1
+OLLAMA_MAX_LOADED_MODELS=1    # Keep at 1 for resource efficiency
+OLLAMA_FLASH_ATTENTION=true   # Changed to true - boolean, not 1
 
 # Ollama initialization script settings
-OLLAMA_MAX_RETRIES=45
-OLLAMA_RETRY_INTERVAL=20
+OLLAMA_MAX_RETRIES=30         # Reduced from 45 - faster startup
+OLLAMA_RETRY_INTERVAL=15      # Reduced from 20 - faster startup
 MODELFILE_PATH=/root/.ollama/scripts/Modelfile
+
+# Ollama runtime settings
+OLLAMA_KEEP_ALIVE=999h        # Keep model in memory for 999 hours
+OLLAMA_USE_MMAP=false         # Disable memory mapping for better performance
 
 # =============================================================================
 # 📱 APPLICATION SETTINGS
