--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - COMPLETE WITH CHALLENGE SYSTEM FOR GUEST SESSIONS
+# nginx/nginx.conf - COMPLETE WITH EXTENDED TIMEOUTS AND ALL ENV VARS
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -11,12 +11,16 @@ env MODEL_NAME;
 env MODEL_TEMPERATURE;
 env MODEL_TOP_P;
 env MODEL_TOP_K;
+env MODEL_MIN_P;
 env MODEL_NUM_CTX;
 env MODEL_NUM_PREDICT;
 env MODEL_REPEAT_PENALTY;
 env MODEL_REPEAT_LAST_N;
 env MODEL_SEED;
 env OLLAMA_GPU_LAYERS;
+env OLLAMA_NUM_THREAD;
+env OLLAMA_KEEP_ALIVE;
+env OLLAMA_USE_MMAP;
 
 events {
     worker_connections 1024;
@@ -32,12 +36,13 @@ http {
     tcp_nodelay     on;   # ENABLED for immediate delivery
     keepalive_timeout  65;
 
-    # STREAMING: No buffering anywhere
+    # STREAMING: No buffering anywhere - EXTENDED TIMEOUTS TO 10 MINUTES
     proxy_buffering off;
     proxy_request_buffering off;
     proxy_http_version 1.1;
     proxy_read_timeout 600s;  # 10 minute timeout
-    proxy_send_timeout 600s;
+    proxy_send_timeout 600s;  # 10 minute timeout
+    proxy_connect_timeout 30s; # Connection timeout
     
     # STREAMING: No compression for SSE
     gzip off;  # DISABLED - gzip breaks streaming
@@ -45,10 +50,11 @@ http {
     resolver 127.0.0.11 ipv6=off;
     lua_package_path "/usr/local/openresty/nginx/lua/?.lua;;";
     
-    # STREAMING: Lua settings
+    # STREAMING: Lua settings - EXTENDED TO 10 MINUTES
     lua_socket_keepalive_timeout 600s;
     lua_socket_read_timeout 600s;
     lua_socket_send_timeout 600s;
+    lua_socket_connect_timeout 30s;
     
     # Shared memory zones - INCREASED SIZE FOR CHALLENGE SYSTEM
     lua_shared_dict guest_toggle 64k;
@@ -182,11 +188,16 @@ http {
             }
         }
 
-        # CHAT API routes - Authentication handled internally
+        # CHAT API routes - Authentication handled internally - EXTENDED 10 MIN TIMEOUT
         location ~ ^/api/chat/(stream|history|clear)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            # EXTENDED TIMEOUTS FOR LONG CHAT RESPONSES
+            proxy_read_timeout 600s;
+            proxy_send_timeout 600s;
+            proxy_connect_timeout 30s;
             
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Max-Age' 1728000;
