MODEL_GGUF_PATH=/volumes/ollama/models/Devstral-Small-2507-Q4_K_M.gguf

--- a/.env
+++ b/.env
@@ -17,6 +17,7 @@ ADMIN_USER_ID=admin
 # =============================================================================
 MODEL_URL=http://ollama:11434
 MODEL_NAME=devstral
+MODEL_GGUF_PATH=/volumes/ollama/models/Devstral-Small-2507-Q4_K_M.gguf
 
 # =============================================================================
 # 🎛️ MODEL PARAMETERS - OPTIMIZED FOR DEVSTRAL SMALL
