--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -8,6 +8,7 @@ env REDIS_HOST;
 env REDIS_PORT;
 env MODEL_URL;
 env MODEL_NAME;
+env MODEL_GGUF_PATH;
 env MODEL_TEMPERATURE;
 env MODEL_TOP_P;
 env MODEL_TOP_K;
