--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,8 @@ services:
       - MODEL_NUM_CTX=${MODEL_NUM_CTX}
       - MODEL_NUM_PREDICT=${MODEL_NUM_PREDICT}
       - MODEL_SEED=${MODEL_SEED}
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE}
+      - OLLAMA_USE_MMAP=${OLLAMA_USE_MMAP}
       - OLLAMA_MAX_RETRIES=${OLLAMA_MAX_RETRIES}
       - OLLAMA_RETRY_INTERVAL=${OLLAMA_RETRY_INTERVAL}
       - MODELFILE_PATH=${MODELFILE_PATH}
@@ -80,6 +82,20 @@ services:
       - REDIS_PORT=${REDIS_PORT}
       - MODEL_URL=${MODEL_URL}
       - MODEL_NAME=${MODEL_NAME}
+      - MODEL_GGUF_PATH=${MODEL_GGUF_PATH}
+      - MODEL_TEMPERATURE=${MODEL_TEMPERATURE}
+      - MODEL_TOP_P=${MODEL_TOP_P}
+      - MODEL_TOP_K=${MODEL_TOP_K}
+      - MODEL_MIN_P=${MODEL_MIN_P}
+      - MODEL_NUM_CTX=${MODEL_NUM_CTX}
+      - MODEL_NUM_PREDICT=${MODEL_NUM_PREDICT}
+      - MODEL_REPEAT_PENALTY=${MODEL_REPEAT_PENALTY}
+      - MODEL_REPEAT_LAST_N=${MODEL_REPEAT_LAST_N}
+      - MODEL_SEED=${MODEL_SEED}
+      - OLLAMA_GPU_LAYERS=${OLLAMA_GPU_LAYERS}
+      - OLLAMA_NUM_THREAD=${OLLAMA_NUM_THREAD}
+      - OLLAMA_KEEP_ALIVE=${OLLAMA_KEEP_ALIVE}
+      - OLLAMA_USE_MMAP=${OLLAMA_USE_MMAP}
       - MIN_PASSWORD_LENGTH=${MIN_PASSWORD_LENGTH}
       - ALLOWED_DOMAINS=${ALLOWED_DOMAINS}
       - RATE_LIMIT_MESSAGES_PER_MINUTE=${RATE_LIMIT_MESSAGES_PER_MINUTE}
