--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ MODEL_SEED=0                  # 0 = random seed each time
 
 # Hardware optimization - CORRECTED
 OLLAMA_NUM_THREAD=6           # Matches your CPU allocation
-OLLAMA_MMAP=true              # Changed to true - better memory efficiency
+OLLAMA_MMAP=false             # Server-level mmap setting - DISABLE FOR BETTER PERFORMANCE
 OLLAMA_NUM_PARALLEL=2         # Reduced from 3 - more stable with limited context
 OLLAMA_GPU_LAYERS=20          # Conservative for 8GB VRAM - test and increase if stable
 
