location = /api/auth/status {
how was this even missing

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -128,6 +128,25 @@ http {
             }
         }
 
+        # AUTH API routes - status
+        location = /api/auth/status {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
+
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
+            content_by_lua_block {
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.handle_auth_api_status()
+            }
+        }
+
         # AUTH API routes - Login and logout only
         location ~ ^/api/auth/(login|logout)$ {
             add_header 'Access-Control-Allow-Origin' '*';
