--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -207,8 +207,8 @@ http {
             }
         }
 
-        # CHAT API routes - Authentication handled internally - EXTENDED 10 MIN TIMEOUT
-        location ~ ^/api/chat/(stream|history|clear)$ {
+        # ENHANCED CHAT API routes - Authentication handled internally - EXTENDED 10 MIN TIMEOUT
+        location ~ ^/api/chat/(stream|history|clear|export|search|stats)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
