--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -54,7 +54,7 @@ http {
     lua_socket_keepalive_timeout 600s;
     lua_socket_read_timeout 600s;
     lua_socket_send_timeout 600s;
-    lua_socket_connect_timeout 30s;
+    lua_socket_connect_timeout 300s;
     
     # Shared memory zones - INCREASED SIZE FOR CHALLENGE SYSTEM
     lua_shared_dict guest_toggle 64k;
@@ -68,19 +68,19 @@ http {
         # STATIC ASSETS - Only exception to default block
         location /js/ {
             root /usr/local/openresty/nginx/dynamic_content;
-            expires 1y;
+            expires 48h;
             add_header Cache-Control "public, immutable";
         }
         
         location /css/ {
             root /usr/local/openresty/nginx/dynamic_content;
-            expires 1y;
+            expires 48h;
             add_header Cache-Control "public, immutable";
         }
         
         location /static/ {
             root /usr/local/openresty/nginx/dynamic_content;
-            expires 1y;
+            expires 48h;
             add_header Cache-Control "public, immutable";
         }
 
