--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - COMPLETE WITH EXTENDED TIMEOUTS AND ALL ENV VARS
+# nginx/nginx.conf - CLOUDFLARE PROXY COMPATIBLE VERSION
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -61,9 +61,51 @@ http {
     lua_shared_dict guest_sessions 2m;  # Increased for sessions + challenges
     lua_shared_dict sse_sessions 5m;
 
+    # CLOUDFLARE PROXY CONFIGURATION
+    # Set real IP from Cloudflare
+    set_real_ip_from 173.245.48.0/20;   # Cloudflare IP ranges
+    set_real_ip_from 103.21.244.0/22;
+    set_real_ip_from 103.22.200.0/22;
+    set_real_ip_from 103.31.4.0/22;
+    set_real_ip_from 141.101.64.0/18;
+    set_real_ip_from 108.162.192.0/18;
+    set_real_ip_from 190.93.240.0/20;
+    set_real_ip_from 188.114.96.0/20;
+    set_real_ip_from 197.234.240.0/22;
+    set_real_ip_from 198.41.128.0/17;
+    set_real_ip_from 162.158.0.0/15;
+    set_real_ip_from 104.16.0.0/13;
+    set_real_ip_from 104.24.0.0/14;
+    set_real_ip_from 172.64.0.0/13;
+    set_real_ip_from 131.0.72.0/22;
+    set_real_ip_from 2400:cb00::/32;    # IPv6 ranges
+    set_real_ip_from 2606:4700::/32;
+    set_real_ip_from 2803:f800::/32;
+    set_real_ip_from 2405:b500::/32;
+    set_real_ip_from 2405:8100::/32;
+    set_real_ip_from 2a06:98c0::/29;
+    set_real_ip_from 2c0f:f248::/32;
+    
+    real_ip_header CF-Connecting-IP;  # Use Cloudflare's real IP header
+    real_ip_recursive on;
+
     server {
+        # Listen on 443 with HTTP (SSL terminated by Cloudflare)
         listen 443;
-        server_name localhost;
+        server_name ai.junder.uk localhost;
+
+        # Handle both HTTP and HTTPS properly
+        # Trust Cloudflare's X-Forwarded-Proto header
+        set $forwarded_scheme $scheme;
+        if ($http_x_forwarded_proto) {
+            set $forwarded_scheme $http_x_forwarded_proto;
+        }
+
+        # Optional: Force HTTPS redirect for direct access (not through Cloudflare)
+        # Uncomment if you want to enforce HTTPS for direct access
+        # if ($forwarded_scheme = "http") {
+        #     return 301 https://$server_name$request_uri;
+        # }
 
         # STATIC ASSETS - Only exception to default block
         location /js/ {
