--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -94,18 +94,26 @@ http {
         listen 443;
         server_name ai.junder.uk localhost;
 
-        # Handle both HTTP and HTTPS properly
-        # Trust Cloudflare's X-Forwarded-Proto header
+        # Handle both Cloudflare proxied and direct localhost access
         set $forwarded_scheme $scheme;
         if ($http_x_forwarded_proto) {
             set $forwarded_scheme $http_x_forwarded_proto;
         }
 
-        # Optional: Force HTTPS redirect for direct access (not through Cloudflare)
-        # Uncomment if you want to enforce HTTPS for direct access
-        # if ($forwarded_scheme = "http") {
-        #     return 301 https://$server_name$request_uri;
-        # }
+        # Allow direct localhost access without redirects
+        set $is_localhost 0;
+        if ($server_name = "localhost") {
+            set $is_localhost 1;
+        }
+        if ($remote_addr = "127.0.0.1") {
+            set $is_localhost 1;
+        }
+        if ($remote_addr ~ "^172\.(1[6-9]|2[0-9]|3[0-1])\.") {
+            set $is_localhost 1;  # Docker networks
+        }
+        if ($remote_addr ~ "^192\.168\.") {
+            set $is_localhost 1;  # Local networks
+        }
 
         # STATIC ASSETS - Only exception to default block
         location /js/ {
