WORKING AND IMPROVED

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - CLOUDFLARE PROXY COMPATIBLE VERSION
+# nginx/nginx.conf - FIXED GUEST API ROUTING
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -208,7 +208,7 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_auth_api()
+                aaa_is_who.route_to_handler("auth_api")
             }
         }
 
@@ -228,12 +228,12 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_register_api()
+                aaa_is_who.route_to_handler("auth_api")
             }
         }
 
-        # GUEST API routes - WITH FULL CHALLENGE SYSTEM
-        location ~ ^/api/guest/(create-session|challenge-status|challenge-response|stats)$ {
+        # FIXED: GUEST API routes - Updated pattern to match both endpoints
+        location ~ ^/api/guest/(create-session|create|challenge-status|challenge-response|stats)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -248,7 +248,7 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_guest_api()
+                aaa_is_who.route_to_handler("guest_api")
             }
         }
 
@@ -273,7 +273,7 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_ollama_chat_api()
+                aaa_is_who.route_to_handler("chat_api")
             }
         }
 
@@ -293,7 +293,7 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_admin_api()
+                aaa_is_who.route_to_handler("admin_api")
             }
         }
 
@@ -313,7 +313,7 @@ http {
             lua_need_request_body on;
             content_by_lua_block {
                 local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_admin_api()
+                aaa_is_who.route_to_handler("admin_api")
             }
         }
 
