--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - FIXED GUEST API ROUTING
+# nginx/nginx.conf - UPDATED WITH SESSION MANAGEMENT ROUTES
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -55,6 +55,10 @@ http {
     lua_socket_read_timeout 3600s;
     lua_socket_send_timeout 3600s;
     lua_socket_connect_timeout 3600s;
+
+    # SHARED MEMORY FOR SESSION MANAGEMENT
+    lua_shared_dict session_store 10m;
+    lua_shared_dict guest_sessions 1m;
 
     # CLOUDFLARE PROXY CONFIGURATION
     # Set real IP from Cloudflare
@@ -173,29 +177,10 @@ http {
             }
         }
 
-        # AUTH API routes - status
-        location = /api/auth/status {
+        # ENHANCED AUTH API routes - Now includes session management
+        location ~ ^/api/auth/(login|logout|register|status|session-status|force-logout)$ {
             add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type';
-
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.handle_auth_api_status()
-            }
-        }
-
-        # AUTH API routes - Login and logout only
-        location ~ ^/api/auth/(login|logout)$ {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
             
             if ($request_method = 'OPTIONS') {
@@ -212,28 +197,8 @@ http {
             }
         }
 
-        # REGISTRATION API
-        location = /api/register {
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Allow-Methods' 'POST, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
-            
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
-            
-            lua_need_request_body on;
-            content_by_lua_block {
-                local aaa_is_who = require "aaa_is_who"
-                aaa_is_who.route_to_handler("auth_api")
-            }
-        }
-
-        # FIXED: GUEST API routes - Updated pattern to match both endpoints
-        location ~ ^/api/guest/(create-session|create|challenge-status|challenge-response|stats)$ {
+        # ENHANCED GUEST API routes - Now includes session status
+        location ~ ^/api/guest/(create-session|create|status)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -252,7 +217,7 @@ http {
             }
         }
 
-        # ENHANCED CHAT API routes - Authentication handled internally - EXTENDED 10 MIN TIMEOUT
+        # ENHANCED CHAT API routes - Now with session validation
         location ~ ^/api/chat/(stream|history|clear|export|search|stats)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -277,7 +242,7 @@ http {
             }
         }
 
-        # ADMIN API routes - Authentication handled internally
+        # ENHANCED ADMIN API routes - Now includes session management
         location ~ ^/api/admin/(stats|users|clear-guest-sessions)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -299,6 +264,26 @@ http {
 
         # Admin User Management API routes
         location ~ ^/api/admin/users/(pending|approve|reject)$ {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
+            
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+            
+            lua_need_request_body on;
+            content_by_lua_block {
+                local aaa_is_who = require "aaa_is_who"
+                aaa_is_who.route_to_handler("admin_api")
+            }
+        }
+
+        # NEW: Admin Session Management API routes
+        location ~ ^/api/admin/session/(force-logout|status)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
