Redis for session management is actually a much better approach than using nginx's shared memory.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-# nginx/nginx.conf - UPDATED WITH SESSION MANAGEMENT ROUTES
+# nginx/nginx.conf - COMPLETE WITH REDIS SESSION MANAGEMENT AND ADMIN ROUTES
 worker_processes auto;
 error_log /var/log/nginx/error.log info;
 pid /var/run/nginx.pid;
@@ -56,9 +56,7 @@ http {
     lua_socket_send_timeout 3600s;
     lua_socket_connect_timeout 3600s;
 
-    # SHARED MEMORY FOR SESSION MANAGEMENT
-    lua_shared_dict session_store 10m;
-    lua_shared_dict guest_sessions 1m;
+    # NO SHARED MEMORY - ALL SESSION MANAGEMENT IN REDIS
 
     # CLOUDFLARE PROXY CONFIGURATION
     # Set real IP from Cloudflare
@@ -177,8 +175,8 @@ http {
             }
         }
 
-        # ENHANCED AUTH API routes - Now includes session management
-        location ~ ^/api/auth/(login|logout|register|status|session-status|force-logout)$ {
+        # AUTH API routes
+        location ~ ^/api/auth/(login|logout|register|status)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -197,7 +195,7 @@ http {
             }
         }
 
-        # ENHANCED GUEST API routes - Now includes session status
+        # GUEST API routes
         location ~ ^/api/guest/(create-session|create|status)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -217,7 +215,7 @@ http {
             }
         }
 
-        # ENHANCED CHAT API routes - Now with session validation
+        # CHAT API routes
         location ~ ^/api/chat/(stream|history|clear|export|search|stats)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
@@ -242,8 +240,8 @@ http {
             }
         }
 
-        # ENHANCED ADMIN API routes - Now includes session management
-        location ~ ^/api/admin/(stats|users|clear-guest-sessions)$ {
+        # ADMIN SYSTEM API routes
+        location ~ ^/api/admin/(stats|guests)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -262,8 +260,8 @@ http {
             }
         }
 
-        # Admin User Management API routes
-        location ~ ^/api/admin/users/(pending|approve|reject)$ {
+        # ADMIN USER MANAGEMENT API routes
+        location ~ ^/api/admin/users(/|/(pending|approve|reject))?$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
@@ -282,8 +280,8 @@ http {
             }
         }
 
-        # NEW: Admin Session Management API routes
-        location ~ ^/api/admin/session/(force-logout|status)$ {
+        # ADMIN SESSION MANAGEMENT API routes (Redis-based)
+        location ~ ^/api/admin/session/(status|force-logout|all|cleanup)$ {
             add_header 'Access-Control-Allow-Origin' '*';
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
             add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization';
